fix: 최근본 내역 sidebar 전역관리로 수정